bat.bool1.makes10.Makes10.scala.error
Erreur de compilation :
Makes10:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a+b==10) {
  ^